Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="DOSMAN : DOSMAN is a graphical DOSBox front-end written in C++ for modern GNU/Linux dekstops environements." />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="DOSMAN : DOSMAN is a graphical DOSBox front-end written in C++ for modern GNU/Linux dekstops environements.">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -32,12 +32,12 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a name="dosman" class="anchor" href="#dosman"><span class="octicon octicon-link"></span></a>DOSMAN</h1>
+<a id="dosman" class="anchor" href="#dosman" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>DOSMAN</h1>
 
 <p>DOSMAN is a graphical <a href="http://www.dosbox.com/">DOSBox</a> front-end written in C++ for modern GNU/Linux desktop environements.</p>
 
 <h2>
-<a name="dependencies" class="anchor" href="#dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h2>
+<a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dependencies</h2>
 
 <p>DOSMAN requires <a href="http://www.gtkmm.org/en/">gtkmm 3.0</a>. Since DOSMAN is a DOSBox, it requires the <code>dosbox</code> executable to be in the path. Most packages provided by the major GNU/Linux distributions will install DOSBox correctly.</p>
 
@@ -47,7 +47,7 @@
 </code></pre>
 
 <h2>
-<a name="builing" class="anchor" href="#builing"><span class="octicon octicon-link"></span></a>Builing</h2>
+<a id="builing" class="anchor" href="#builing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Builing</h2>
 
 <p>DOSMAN uses Make and g++. To build it, move to the project's directory and run:    </p>
 
@@ -55,7 +55,7 @@
 </code></pre>
 
 <h2>
-<a name="installing-and-uninstalling" class="anchor" href="#installing-and-uninstalling"><span class="octicon octicon-link"></span></a>Installing and Uninstalling</h2>
+<a id="installing-and-uninstalling" class="anchor" href="#installing-and-uninstalling" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installing and Uninstalling</h2>
 
 <p>Installing and uninstalling can be done from the project's Makefile with</p>
 
@@ -68,7 +68,7 @@
 </code></pre>
 
 <h2>
-<a name="running" class="anchor" href="#running"><span class="octicon octicon-link"></span></a>Running</h2>
+<a id="running" class="anchor" href="#running" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Running</h2>
 
 <p>Once installed, run <code>dosman</code> to start the program. A directory will be created a <code>~/.dosman</code> to hold you programs and default configurations.<br>
 Since DOSMAN is a clean front-end, you can actually modify every file in every sub-directory. There is no database involved, DOSMAN works on flat files and directory structure.</p>
@@ -79,7 +79,7 @@ Since DOSMAN is a clean front-end, you can actually modify every file in every s
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">DOSMAN maintained by <a href="https://github.com/Marneus68">Marneus68</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
