Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,15 +31,34 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
+        <p><img src="https://raw.githubusercontent.com/Marneus68/DOSMAN/master/img/diskicon.png" alt="Icon"></p>
+
+<h1>
 <a id="dosman" class="anchor" href="#dosman" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>DOSMAN</h1>
 
 <p>DOSMAN is a graphical <a href="http://www.dosbox.com/">DOSBox</a> front-end written in C++ for modern GNU/Linux desktop environements.</p>
 
+<p>With DOSMAN you can manage games, attribute cover artworks and tweaks the paramaters DOSBox will use to launch them.</p>
+
+<p>You can find the sources on GitHub <a href="https://github.com/Marneus68/DOSMAN">here</a>. </p>
+
+<h2>
+<a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screenshots</h2>
+
+<h3>
+<a id="main-menu" class="anchor" href="#main-menu" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Main Menu</h3>
+
+<p><img src="https://raw.githubusercontent.com/Marneus68/DOSMAN/master/img/cap1.png" alt="Main menu"></p>
+
+<h3>
+<a id="configuration-screen" class="anchor" href="#configuration-screen" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Configuration Screen</h3>
+
+<p><img src="https://raw.githubusercontent.com/Marneus68/DOSMAN/master/img/cap2.png" alt="Configuration screen"></p>
+
 <h2>
 <a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dependencies</h2>
 
-<p>DOSMAN requires <a href="http://www.gtkmm.org/en/">gtkmm 3.0</a>. Since DOSMAN is a DOSBox, it requires the <code>dosbox</code> executable to be in the path. Most packages provided by the major GNU/Linux distributions will install DOSBox correctly.</p>
+<p>DOSMAN requires <a href="http://www.gtkmm.org/en/">gtkmm 3.0</a>. Since DOSMAN is a DOSBox front-end, it requires the <code>dosbox</code> executable to be in the path. Most packages provided by the major GNU/Linux distributions will install DOSBox correctly.</p>
 
 <p>On debian based systems, gtkmm 3.0 and its developement headers can be installed by running the following command as root:    </p>
 
@@ -71,7 +90,7 @@
 <a id="running" class="anchor" href="#running" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Running</h2>
 
 <p>Once installed, run <code>dosman</code> to start the program. A directory will be created a <code>~/.dosman</code> to hold you programs and default configurations.<br>
-Since DOSMAN is a clean front-end, you can actually modify every file in every sub-directory. There is no database involved, DOSMAN works on flat files and directory structure.</p>
+Since DOSMAN is designed to be a simple and clean front-end, you can actually modify every file in every sub-directory. There is no database involved, DOSMAN works on flat files and directory structure.</p>
       </section>
     </div>
 
